# bazel-modular-design-pattern

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE
.github/workflows/: main.yml
ios/: AppDelegate.swift  BUILD.bazel  Info.plist
lib/: modular.bzl  register_libraries.bzl
lib/Lottie-3.1.6/: Lottie.BUILD.bazel  lib.bzl
tools/: bazeliskw
