package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Buildifier

load(
    "@com_github_bazelbuild_buildtools//buildifier:def.bzl",
    "buildifier",
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

load(
    "@bazel_tools//tools/python:toolchain.bzl",
    "py_runtime_pair",
)

# py_runtime(
#     name = "python3_runtime",
#     files = ["@python_interpreter//:files"],
#     interpreter = "@python_interpreter//:python_bin",
#     python_version = "PY3",
#     visibility = ["//visibility:public"],
# )

# py_runtime_pair(
#     name = "my_py_runtime_pair",
#     py2_runtime = None,
#     py3_runtime = ":python3_runtime",
# )

# toolchain(
#     name = "my_py_toolchain",
#     toolchain = ":my_py_runtime_pair",
#     toolchain_type = "@bazel_tools//tools/python:toolchain_type",
# )

py_runtime(
    name = "python3",
    interpreter_path = "/usr/bin/python3",
    stub_shebang = "#!/usr/bin/env python3",
    python_version = "PY3",
)

py_runtime(
    name = "python2",
    interpreter_path = "/usr/bin/python3",
    stub_shebang = "#!/usr/bin/env python3",
    python_version = "PY2",
)

py_runtime_pair(
    name = "py",
    py3_runtime = ":python3",
    py2_runtime = ":python2",
)

toolchain(
    name = "py-toolchain",
    toolchain = ":py",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
